新增事件   onMessage   onPlayerTick   onDeath   doAttack   doItemPick   doItemUse